bug fix wrong local size when constants are used