@@ -3,12 +3,13 @@ package at.tugraz.ist.cc.instructions;
 import at.tugraz.ist.cc.symbol_table.SymbolVariable;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public class ReturnMainInstruction extends BaseInstruction {
 
-    private SymbolVariable returnValue;
+    private final SymbolVariable returnValue;
 
     public ReturnMainInstruction(ReturnInstruction instruction) {
         super(instruction.associatedCallable, Optional.empty());
@@ -36,6 +37,6 @@ public class ReturnMainInstruction extends BaseInstruction {
 
     @Override
     public Collection<SymbolVariable> getUsedSymbolVariables() {
-        return  List.of(returnValue);
+        return (returnValue.getValue() == null) ? List.of(returnValue) : Collections.emptyList();
     }
 }
